// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex component matches snapshot (default props) 1`] = `
<div
  className="flexItem"
/>
`;

exports[`Flex component matches snapshot (set all props) 1`] = `
<div
  className="flexItem flexItem--shrink flexItem--justifySpaceBetween flexItem--alignCenter foo"
/>
`;
